Enable creating and fetching tasks